fix(测试跟踪): jira使用自定义模板创建缺陷失败
--bug=1027534 --user=陈建星 【测试跟踪】项目集成jira-使用默认模版-新建/导入缺陷失败 https://www.tapd.cn/55049933/s/1389541